day 2/vpc/vpc.tf
resource "aws_default_vpc" "myvpc_p" {
  tags = {
    Name = "default"
  }
}

resource "aws_security_group" "my_sg1" {
  name        = "mysg-terrorfrom"
  description = "for testing "
  vpc_id      = aws_default_vpc.myvpc_p.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    to_port     = 0
    from_port   = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
